--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "qs": "^6.14.1",
+    "resend": "^6.6.0",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
